[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "application_config"
version = "1.1.0"
authors = [
  { name="Jason Piszcyk", email="Jason.Piszcyk@gmail.com" },
]
description = "Class to provide application config"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis",
]

[project.urls]
"Homepage" = "https://github.com/JasonPiszcyk/ApplicationConfig"
"Bug Tracker" = "https://github.com/JasonPiszcyk/ApplicationConfig/issues"